Bug#8861 - If Return is a YEAR data type, value is not shown in year format   Bug partially fixed by 9775/9102 work on SP function return.